# data-mining-lab

./: .gitignore  README.md  basics_of_pandas.ipynb  box_plot.ipynb  filters_words_that_ends_with_e.ipynb  main.py  pyproject.toml
clp-01/: problem-01.py  problem-02.py
data_preprocessing/: pre-processing.ipynb
lab-report-01/: problem_01.py  problem_03.py  problem_04.py  problem_06.py
practice_for_final/: assignment_dataset.csv  dataset.csv  dbscan.csv  dbscan.ipynb  decision_tree.ipynb  k_means_clustering.ipynb  kmeans.ipynb  knn.ipynb  test.ipynb  visualization.ipynb
practice_for_final/practice_for_clp03/: dtree.ipynb  kmeans.ipynb  knn.ipynb
report-01/: problem_02.py  problem_05.py
report-02/: categorical_data.csv  data_binning.csv  data_binning.ipynb  data_visualization.csv  encoding_categorical_data.ipynb  missing_values.csv  missing_values.ipynb  visualization.ipynb  z_score.ipynb  zscore_data.csv
report-03/: Market_Basket_Optimisation.csv  api.py  apriori_algorithm.ipynb  basket_analysis_using_apriori.ipynb  basket_analysis_using_fpgrowth.ipynb  greenbasket-products.csv  greenbasket.csv  product_recommendation_system_using_cosine_similarity.ipynb  products.pkl  similarity.pkl  transactions.csv
