[project]
name = "data-mining-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.3",
    "ipykernel>=6.29.5",
    "mlxtend>=0.23.4",
    "nltk>=3.9.1",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
]
